--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-markup-color-extractor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Extract colors from markup (XML and HTML)",
   "license": "MIT",
   "homepage": "https://github.com/mjhasbach/node-markup-color-extractor",
@@ -21,6 +21,16 @@
     "parse",
     "extract",
     "color",
+    "hex",
+    "hexadecimal",
+    "argb",
+    "rgb",
+    "rgba",
+    "hsl",
+    "hsla",
+    "hsv",
+    "hsva",
+    "named",
     "string",
     "buffer",
     "url",
