Changed NPM package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-markup-color-extractor",
+  "name": "markup-color-extractor",
   "version": "1.0.1",
   "description": "Extract colors from markup (XML and HTML)",
   "license": "MIT",
